2999-02-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 523742 – Use noinst for non-installable libraries

	* tests/Makefile.am: use noninst_LTLIBRARIES for noninstalled 
	libraries.Patch by Björn Lindqvist

2009-02-06  Murray Cumming  <murrayc@murrayc.com>

	* gio/gfilterinputstream.c:
	* gio/gfilteroutputstream.c: Correct the grammar in some property 
	documentation.
	* gio/gdatainputstream.c:
	* glib/gregex.c: Correct the spelling of 
	occurrence in documentation.

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-01-31  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-31  Matthias Clasen  <mclasen@redhat.com>

	Bug 569105 – g_time_val_to_iso8601() assumes time_t==long

	* glib/gtimer.c (g_time_val_to_iso8601): Pass a time_t* to gmtime().
	Pointed out by Matthias Drochner.

2009-01-27  Christian Persch  <chpe@gnome.org>

	* configure.in:
	* docs/reference/glib/glib-sections.txt:
	* docs/reference/macros_misc.sgml:
	* docs/reference/glib/tmpl/types.sgml: Add
	G_GOFFSET_FORMAT and friends. Bug #563141.

2009-01-23  Stefan Kost  <ensonic@users.sf.net>

	* docs/reference/glib/Makefile.am:
	  Add SCAN_OPTIONS=--ignore-decorators="GLIB_VAR" to Makefile.am to fix
	  on problem with the doc build.

2009-01-21  Tor Lillqvist  <tml@novell.com>

	* glib/gwin32.c (g_win32_locale_filename_from_utf8): Drop the code
	in the else branch of #if GLIB_CHECK_VERSION (2, 19, 0). Drop
	unused variables.

2009-01-20  Matthias Clasen  <mclasen@redhat.com>

	Bug 568294 – A wrong reference in the description of 
	g_bookmark_file_add_application()

	* glib/gbookmarkfile.c (g_bookmark_file_add_application):
	Fix a typo in the docs. Pointed out by Takeshi Aihana

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===
